noticed a bug where the '?' next to an item could wrap and not be clickable. This should fix the wrapping but I dont have an offline version to test

--- a/node/public/stylesheets/style.sass
+++ b/node/public/stylesheets/style.sass
@@ -26,6 +26,9 @@ a
     &:hover
         color: #4e6493
 
+.item
+    white-space: nowrap;
+
 .header, .wrapper, .footer
     width: $content-width
     margin: 0 auto 0 auto
